# vox-oxide

./: todo
audio-relay-service/: Cargo.toml  config.yaml  logo.ascii  readme.MD
audio-relay-service/src/: app.rs  app_config.rs  common.rs  lib.rs  main.rs
audio-relay-service/src/common/: logging.rs  mod.rs
audio-relay-service/src/common/security/: certs.rs  endpoint_config.rs  mod.rs
audio-relay-service/src/common/services/: auth.rs
audio-relay-service/src/vc/: group_voice_session.rs  mod.rs
audio-relay-service/tests/: test_config.rs
audio-relay-service/tests/resources/: invalid-test-config-missing-field.yaml  valid-test-config.yaml
client/: .gitignore  Cargo.toml
client/.cargo/: config.toml
client/src/: app_config.rs  client_config.rs  main.rs
client/src/app/: mod.rs
client/src/audio/: audio_manager.rs  audio_source.rs  mod.rs
dev-certs/: dev-ca.key  dev-ca.pem  dev-ca.srl  dev-server.csr  dev-server.key  dev-server.pem  server.cnf
lib/lib-common-voxoxide/: Cargo.toml
lib/lib-common-voxoxide/src/: lib.rs
lib/lib-common-voxoxide/src/raw/: ars_auth.rs  mod.rs
lib/lib-common-voxoxide/src/serde/: ars_auth.rs
